<resources>
    <string name="app_name" translatable="false">Dicely Done</string>

    <string name="bet_minimum">Least Bet:</string>
    <string name="bet_player">Your Bet:</string>
    <string name="bet_total">Total Bet:</string>

    <string name="action_bet">Bet</string>
    <string name="action_continue">Continue Game</string>
    <string name="action_fold">Fold</string>
    <string name="action_play">Play</string>
    <string name="action_quit">Quit</string>
    <string name="action_start_game">Start Game</string>
    <string name="action_start">Start</string>

    <string name="chips_player">Your Candy:</string>

    <string name="drawer_open">Show Players</string>
    <string name="drawer_close">Hide Players</string>

    <string name="error_connect_failed">Failed connecting to the server.</string>
    <string name="error_disconnect">Lost connection to the server.</string>
    <string name="error_nick_required">You need a nickname to play.</string>
    <string name="error_nick_whitespace">Cannot contain whitespace.</string>
    <string name="error_parse_port">Must be a number.</string>

    <string name="instruction_bet">Place your bet</string>
    <string name="instruction_call">Call it or fold</string>
    <string name="instruction_roll_dice">Roll your dice</string>
    <string name="instruction_roll_shake">Shake to roll dice</string>
    <string name="instruction_reroll_dice">Roll some dice again</string>
    <string name="instruction_reroll_shake">Select dice then shake to roll them</string>
    <string name="instruction_wait">Wait for your turn</string>

    <string name="label_bet">Bet:</string>
    <string name="label_hand">Hand:</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_opts">Options:</string>
    <string name="label_real_dice">Use real dice</string>
    <string name="label_roll">Roll</string>
    <string name="label_server_addr">Server</string>
    <string name="label_server_port">Port</string>
    <string name="label_simulate">Simulate the game</string>

    <string name="question_confirm_quit">Are you sure you want to quit?</string>
    <string name="question_play_again">Do you want to play again?</string>

    <string name="result_victory">You Won!</string>
    <string name="result_defeat">You lost…</string>


    <string name="toast_folded"> folded.</string>
    <string name="toast_joined_server">Connected to the server</string>
    <string name="toast_placed_bet"> placed a bet.</string>

    <string name="wait_connecting">Connecting to the server…</string>
    <string name="wait_gamestart">Waiting for the game to start…</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
