<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufrgs.inf.dicelydone.StartGameActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="@dimen/text_margin_left"
        android:id="@+id/nickEdit"
        android:hint="@string/label_nickname"
        android:maxLines="1" android:singleLine="true"
        android:imeActionId="@+id/start_game"
        android:imeActionLabel="@string/action_start"
        android:imeOptions="actionUnspecified" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickEdit"
        android:layout_alignRight="@+id/nickEdit"
        android:layout_marginRight="20dp"
        android:text="@string/action_start_game"
        android:id="@+id/btnStartGame" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_simulate"
        android:id="@+id/cbSimulate"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/nickEdit"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSimulate"
        android:layout_alignParentLeft="true"
        android:id="@+id/serverAddrEdit"
        android:hint="@string/label_server_addr"
        android:imeOptions="actionNext"
        android:singleLine="true" android:maxLines="1" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nickEdit"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/serverPortEdit"
        android:hint="@string/label_server_port"
        android:imeOptions="actionNext"
        android:layout_alignBaseline="@+id/serverAddrEdit"
        android:layout_below="@+id/serverAddrEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_server_opts"
        android:id="@+id/textView9"
        android:layout_below="@+id/btnStartGame"
        android:layout_alignLeft="@+id/nickEdit"
        android:layout_marginTop="60dp" />

</RelativeLayout>
