<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/playerBetLabel"
        android:id="@+id/totalBetLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalBetLabel"
            android:textAppearance="@style/PokerGame.TextAppearance.Label"
            android:text="@string/bet_total" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:id="@+id/totalBetView"
            android:text="0"
            android:textAppearance="@style/PokerGame.TextAppearance.ChipSumVal"
            android:gravity="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/totalBetLayout"
        android:layout_alignRight="@+id/playerBetView"
        android:id="@+id/minBetLayout" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minBetLabel"
            android:textAppearance="@style/PokerGame.TextAppearance.Label"
            android:text="@string/bet_minimum" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/minBetView"
            android:text="0"
            android:textAppearance="@style/PokerGame.TextAppearance.ChipSumVal"
            android:gravity="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerBetView"
        android:layout_below="@+id/totalBetLayout"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/PokerGame.TextAppearance.Label"
        android:text="@string/bet_player"
        android:id="@+id/playerBetLabel" />

    <br.ufrgs.inf.dicelydone.ChipSetView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerBetLabel"
        android:layout_centerHorizontal="true"
        android:id="@+id/playerBetView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerChipsView"
        android:layout_below="@+id/playerBetView"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/PokerGame.TextAppearance.Label"
        android:text="@string/chips_player"
        android:id="@+id/playerChipsLabel" />

    <br.ufrgs.inf.dicelydone.ChipSetView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerChipsView"
        android:layout_below="@+id/playerChipsLabel"
        android:layout_centerHorizontal="true" />


</RelativeLayout>