<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <br.ufrgs.inf.dicelydone.HandView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/handView"
        app:dieMargin="10dp"
        app:dieElevation="4dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/handView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/text_margin_left"
        android:id="@+id/instructionsView"
        android:textAppearance="@style/PokerGame.TextAppearance.Instructions"
        android:text="@string/instruction_bet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructionsView"
        android:layout_toLeftOf="@+id/buttonCancel"
        android:id="@+id/buttonOk"
        android:text="Ok" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonOk"
        android:layout_alignParentRight="true"
        android:id="@+id/buttonCancel"
        android:text="Fold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonOk"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/betValGrid"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/totalBetLabel"
            android:textAppearance="@style/PokerGame.TextAppearance.Label"
            android:text="@string/bet_total" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:id="@+id/totalBetView"
            android:text="0"
            android:textAppearance="@style/PokerGame.TextAppearance.ChipSumVal"
            android:gravity="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowSpan="2"
            android:minWidth="@dimen/fragment_betting_round_spacer_width" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/minBetLabel"
            android:textAppearance="@style/PokerGame.TextAppearance.Label"
            android:text="@string/bet_minimum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:id="@+id/minBetView"
            android:text="0"
            android:textAppearance="@style/PokerGame.TextAppearance.ChipSumVal"
            android:gravity="center" />

    </GridLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerBetView"
        android:layout_below="@+id/betValGrid"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/PokerGame.TextAppearance.Label"
        android:text="@string/bet_player"
        android:id="@+id/playerBetLabel" />

    <br.ufrgs.inf.dicelydone.ChipSetView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerBetLabel"
        android:layout_centerHorizontal="true"
        android:id="@+id/playerBetView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerChipsView"
        android:layout_below="@+id/playerBetView"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/PokerGame.TextAppearance.Label"
        android:text="@string/chips_player"
        android:id="@+id/playerChipsLabel" />

    <br.ufrgs.inf.dicelydone.ChipSetView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerChipsView"
        android:layout_below="@+id/playerChipsLabel"
        android:layout_centerHorizontal="true" />

</RelativeLayout>