<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PokerGameFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|bottom">

        <br.ufrgs.inf.dicelydone.HandView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/handView"
            android:layout_gravity="top|center"
            app:dieMargin="10dp"
            app:dieElevation="4dp"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp"
            android:text="@string/instruction_wait"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="24dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bet_total"
                android:layout_row="0"
                android:layout_column="0" />

            <Space
                android:layout_width="@dimen/betview_spacer_width"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_rowSpan="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/bet_player"
                android:layout_row="0"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/totalBetView"
                android:layout_row="1"
                android:layout_column="0"
                android:textSize="32sp"
                android:textColor="@color/bright_foreground_material_light"
                android:layout_gravity="fill_horizontal|center"
                android:gravity="center" />

            <br.ufrgs.inf.dicelydone.ChipSetView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:id="@+id/playerBetView"
                android:layout_gravity="center_vertical" />

        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/chips_player" />

            <br.ufrgs.inf.dicelydone.ChipSetView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:id="@+id/playerChipsView" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
